edited gui class file with sample javafx code and instructions to get javafx up and running on intelij IDE 2020.1